More alignment fixes

--- a/piQRoss.css
+++ b/piQRoss.css
@@ -45,7 +45,7 @@ tr, td, th {
 	display:flex;
 	align-items: flex-end;
 	align-self: flex-end;
-	justify-content: space-between;
+	justify-content: space-around;
 }
 
 .hintCol {
